--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,6 @@
 @import "./utilities/reset.css";
 @import "./utilities/base.css";
+@import "./utilities/gradients.css";
 @import "./utilities/utilities.css";
 @import "./utilities/typography.css";
 @import "./utilities/colors.css";
