lots of style updates, nav starting to look right and search section is taking shape

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5,3 +5,6 @@
 @import "./utilities/typography.css";
 @import "./utilities/colors.css";
 @import "./utilities/flexbox.css";
+
+@import "./sections/header.css";
+@import "./sections/search.css";
