--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -13,12 +13,18 @@
 </head>
 <body>
 	<header>
-		<a href="{{ .Site.BaseURL }}">{{ .Site.Title }}</a>
 		<nav>
-			<ul>
-				{{ range .Site.Menus.main }}
-				<li><a href="{{ .URL | relURL }}">{{ .Name }}</a></li>
-				{{ end }}
-			</ul>
+			<div class="container">
+				<ul>
+					<li>
+						<a href="{{ .Site.BaseURL }}">
+							<img width="109" src="{{ .Site.BaseURL }}images/logo@2x.png"/>
+						</a>
+					</li>
+					{{ range .Site.Menus.main }}
+						<li><a href="{{ .URL | relURL }}">{{ .Name }}</a></li>
+					{{ end }}
+				</ul>
+			</div>
 		</nav>
 	</header>
