--- a/layouts/partials/search_section.html
+++ b/layouts/partials/search_section.html
@@ -1,3 +1,8 @@
-  <div class="search main-section">
-    <p>search here</p>
+  <div class="search u-gradient--redToRed main-section">
+    <div class="container">
+      <h1 class="u-color--white u-fontWeight--bold u-fontSize--header u-textAlign--center u-marginTop--most u-marginBottom--more">Help Center</h1>
+      <div class="search-wrapper">
+        <input type="text" />
+      </div>
+    </div>
   </div>
