--- a/static/css/utilities/base.css
+++ b/static/css/utilities/base.css
@@ -8,10 +8,6 @@ html {
 
 body {
   font-family: "Helvetica Neue", "Helvetica", sans-serif;
-  overflow: hidden;
-  display: flex;
-  flex-direction: column;
-  flex: 1;
   -webkit-font-smoothing: antialiased;
 }
 
@@ -31,10 +27,16 @@ code {
 
 .container {
   width: 100%;
+  max-width: 1040px;
   padding: 0 20px;
   margin: 0 auto;
 }
-.paddingContainer { padding: 0 20px; }
+
+.main-section {
+  padding: 30px 0 40px;
+  position: relative;
+  margin: 0;
+}
 
 input::-webkit-input-placeholder,
 textarea::-webkit-input-placeholder,
@@ -79,8 +81,9 @@ and `background-position: [value]`
 
 /* ≥ 1024px */
 @media screen and (min-width: 64em) {
-  .container,
-  .paddingContainer  { padding: 0 30px; }
+  .container { padding: 0 30px; }
+  .main-section { padding: 60px 0 70px; }
+  .main-section.search { padding-top: 80px; }
 }
 
 /* ≥ 1280px */
