lots of styles and some icons, get quick link blocks below serach in

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,6 +1,7 @@
 {{ partial "header.html" . }}
 	<main>
 		{{ partial "search_section.html" . }}
+		{{ partial "quicklink_blocks.html" . }}
 		<div class="filler"></div>
 		{{ partial "howto_section.html" . }}
 		{{ partial "documentation_reference_section.html" . }}
