--- a/layouts/partials/search_section.html
+++ b/layouts/partials/search_section.html
@@ -1,6 +1,6 @@
   <div class="search u-gradient--redToRed main-section">
     <div class="container">
-      <h1 class="u-color--white u-fontWeight--bold u-fontSize--header u-textAlign--center u-marginTop--most u-marginBottom--more">Help Center</h1>
+      <h1 class="u-color--white u-fontWeight--bold u-fontSize--header u-textAlign--center">Help Center</h1>
       <div class="search-wrapper">
         <input type="text" />
       </div>
