--- a/static/css/sections/header.css
+++ b/static/css/sections/header.css
@@ -1,6 +1,6 @@
 nav {
   background: rgba(255,255,255,.2);
-  padding: 15px 0;
+  padding: 15px 0 13px;
   position: absolute;
   width: 100%;
   z-index: 200;
