--- a/static/css/sections/search.css
+++ b/static/css/sections/search.css
@@ -1,9 +1,16 @@
+.search.main-section {
+  min-height: 250px;
+}
+.search.main-section h1 {
+  margin-top: 50px;
+  margin-bottom: 30px;
+}
 .search-wrapper {
   width: 100%;
   max-width: 960px;
   margin: 0 auto;
 }
-
 .search-wrapper input {
   width: 100%;
+  height: 40px;
 }
