--- a/layouts/partials/documentation_reference_section.html
+++ b/layouts/partials/documentation_reference_section.html
@@ -1,3 +1,85 @@
   <div class="documentation main-section">
-    <p>Documentation reference</p>
+    <div class="container">
+      <div class="header-wrapper u-textAlign--center">
+        <p class="u-color--tuna u-fontWeight--bold u-fontSize--header u-marginBottom--normal">Documentation reference</p>
+        <p class="u-fontSize--large u-fontWeight--medium u-color--dustyGray u-lineHeight--normal">Quickly find docs for whatever you need help with.</p>
+      </div>
+      <div class="docs-ref-wrapper">
+        <ul class="docs-ref-list">
+
+          <li class="doc-ref-list-item">
+            <div class="doc-ref">
+              <p class="u-fontSize--largest u-fontWeight--medium u-color--tuna">Getting Started</p>
+              <ul>
+                <li><a class="u-color--curiousBlue u-textDecoration--underlineOnHover">Ref item 1</a></li>
+                <li><a class="u-color--curiousBlue u-textDecoration--underlineOnHover">Ref item 2</a></li>
+                <li><a class="u-color--curiousBlue u-textDecoration--underlineOnHover">Ref item 3</a></li>
+                <li><a class="u-color--curiousBlue u-textDecoration--underlineOnHover">Ref item 4</a></li>
+              </ul>
+            </div>
+          </li>
+
+          <li class="doc-ref-list-item">
+            <div class="doc-ref">
+              <p class="u-fontSize--largest u-fontWeight--medium u-color--tuna">Packaging An Application</p>
+              <ul>
+                <li><a class="u-color--curiousBlue u-textDecoration--underlineOnHover">Ref item 1</a></li>
+                <li><a class="u-color--curiousBlue u-textDecoration--underlineOnHover">Ref item 2</a></li>
+                <li><a class="u-color--curiousBlue u-textDecoration--underlineOnHover">Ref item 3</a></li>
+                <li><a class="u-color--curiousBlue u-textDecoration--underlineOnHover">Ref item 4</a></li>
+              </ul>
+            </div>
+          </li>
+
+          <li class="doc-ref-list-item">
+            <div class="doc-ref">
+              <p class="u-fontSize--largest u-fontWeight--medium u-color--tuna">Distributing An Application</p>
+              <ul>
+                <li><a class="u-color--curiousBlue u-textDecoration--underlineOnHover">Ref item 1</a></li>
+                <li><a class="u-color--curiousBlue u-textDecoration--underlineOnHover">Ref item 2</a></li>
+                <li><a class="u-color--curiousBlue u-textDecoration--underlineOnHover">Ref item 3</a></li>
+                <li><a class="u-color--curiousBlue u-textDecoration--underlineOnHover">Ref item 4</a></li>
+              </ul>
+            </div>
+          </li>
+
+          <li class="doc-ref-list-item">
+            <div class="doc-ref">
+              <p class="u-fontSize--largest u-fontWeight--medium u-color--tuna">Examples</p>
+              <ul>
+                <li><a class="u-color--curiousBlue u-textDecoration--underlineOnHover">Ref item 1</a></li>
+                <li><a class="u-color--curiousBlue u-textDecoration--underlineOnHover">Ref item 2</a></li>
+                <li><a class="u-color--curiousBlue u-textDecoration--underlineOnHover">Ref item 3</a></li>
+                <li><a class="u-color--curiousBlue u-textDecoration--underlineOnHover">Ref item 4</a></li>
+              </ul>
+            </div>
+          </li>
+
+          <li class="doc-ref-list-item">
+            <div class="doc-ref">
+              <p class="u-fontSize--largest u-fontWeight--medium u-color--tuna">Reference</p>
+              <ul>
+                <li><a class="u-color--curiousBlue u-textDecoration--underlineOnHover">Ref item 1</a></li>
+                <li><a class="u-color--curiousBlue u-textDecoration--underlineOnHover">Ref item 2</a></li>
+                <li><a class="u-color--curiousBlue u-textDecoration--underlineOnHover">Ref item 3</a></li>
+                <li><a class="u-color--curiousBlue u-textDecoration--underlineOnHover">Ref item 4</a></li>
+              </ul>
+            </div>
+          </li>
+
+          <li class="doc-ref-list-item">
+            <div class="doc-ref">
+              <p class="u-fontSize--largest u-fontWeight--medium u-color--tuna">Knowledge Base</p>
+              <ul>
+                <li><a class="u-color--curiousBlue u-textDecoration--underlineOnHover">Ref item 1</a></li>
+                <li><a class="u-color--curiousBlue u-textDecoration--underlineOnHover">Ref item 2</a></li>
+                <li><a class="u-color--curiousBlue u-textDecoration--underlineOnHover">Ref item 3</a></li>
+                <li><a class="u-color--curiousBlue u-textDecoration--underlineOnHover">Ref item 4</a></li>
+              </ul>
+            </div>
+          </li>
+
+        </ul>
+      </div>
+    </div>
   </div>
