--- a/layouts/partials/documentation_reference_section.html
+++ b/layouts/partials/documentation_reference_section.html
@@ -5,9 +5,9 @@
         <p class="u-fontSize--large u-fontWeight--medium u-color--dustyGray u-lineHeight--normal">Quickly find docs for whatever you need help with.</p>
       </div>
       <div class="docs-ref-wrapper">
-        <ul class="docs-ref-list">
+        <div class="u-flexTabletReflow docs-ref-list flex1 flexWrap--wrap">
 
-          <li class="doc-ref-list-item">
+          <div class="doc-ref-list-item">
             <div class="doc-ref">
               <p class="u-fontSize--largest u-fontWeight--medium u-color--tuna">Getting Started</p>
               <ul>
@@ -17,9 +17,9 @@
                 <li><a class="u-color--curiousBlue u-textDecoration--underlineOnHover">Ref item 4</a></li>
               </ul>
             </div>
-          </li>
+          </div>
 
-          <li class="doc-ref-list-item">
+          <div class="doc-ref-list-item">
             <div class="doc-ref">
               <p class="u-fontSize--largest u-fontWeight--medium u-color--tuna">Packaging An Application</p>
               <ul>
@@ -29,9 +29,9 @@
                 <li><a class="u-color--curiousBlue u-textDecoration--underlineOnHover">Ref item 4</a></li>
               </ul>
             </div>
-          </li>
+          </div>
 
-          <li class="doc-ref-list-item">
+          <div class="doc-ref-list-item">
             <div class="doc-ref">
               <p class="u-fontSize--largest u-fontWeight--medium u-color--tuna">Distributing An Application</p>
               <ul>
@@ -41,9 +41,9 @@
                 <li><a class="u-color--curiousBlue u-textDecoration--underlineOnHover">Ref item 4</a></li>
               </ul>
             </div>
-          </li>
+          </div>
 
-          <li class="doc-ref-list-item">
+          <div class="doc-ref-list-item">
             <div class="doc-ref">
               <p class="u-fontSize--largest u-fontWeight--medium u-color--tuna">Examples</p>
               <ul>
@@ -53,9 +53,9 @@
                 <li><a class="u-color--curiousBlue u-textDecoration--underlineOnHover">Ref item 4</a></li>
               </ul>
             </div>
-          </li>
+          </div>
 
-          <li class="doc-ref-list-item">
+          <div class="doc-ref-list-item">
             <div class="doc-ref">
               <p class="u-fontSize--largest u-fontWeight--medium u-color--tuna">Reference</p>
               <ul>
@@ -65,9 +65,9 @@
                 <li><a class="u-color--curiousBlue u-textDecoration--underlineOnHover">Ref item 4</a></li>
               </ul>
             </div>
-          </li>
+          </div>
 
-          <li class="doc-ref-list-item">
+          <div class="doc-ref-list-item">
             <div class="doc-ref">
               <p class="u-fontSize--largest u-fontWeight--medium u-color--tuna">Knowledge Base</p>
               <ul>
@@ -77,9 +77,9 @@
                 <li><a class="u-color--curiousBlue u-textDecoration--underlineOnHover">Ref item 4</a></li>
               </ul>
             </div>
-          </li>
+          </div>
 
-        </ul>
+        </div>
       </div>
     </div>
   </div>
