--- a/static/css/sections/guideblocks.css
+++ b/static/css/sections/guideblocks.css
@@ -12,7 +12,7 @@
   padding: 22px 20px;
   border-radius: 6px;
   text-align: center;
-  box-shadow: 0 1px 4px rgba(0,0,0,0.16);
+  box-shadow: 0 0 4px rgba(0,0,0,0.16);
 }
 .guide-block .icon-wrapper {
   min-height: 78px;
