--- a/static/css/utilities/utilities.css
+++ b/static/css/utilities/utilities.css
@@ -15,13 +15,8 @@
 
 /* Spacing utility classes */
 
-.u-margin-none { margin: 0; }
-.u-padding-none { padding: 0; }
-
-/* Spacing utility classes */
-
-.u-margin-none { margin: 0; }
-.u-padding-none { padding: 0; }
+.u-margin--none { margin: 0; }
+.u-padding--none { padding: 0; }
 .u-margin--small { margin: 12px; }
 .u-marginBottom--none { margin-bottom: 0; }
 .u-marginBottom--small { margin-bottom: 6px; }
