add in schedulers section

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -14,3 +14,4 @@
 @import "./sections/quicklinks.css";
 @import "./sections/guideblocks.css";
 @import "./sections/documentation_reference.css";
+@import "./sections/schedulers.css";
