--- a/layouts/partials/search_section.html
+++ b/layouts/partials/search_section.html
@@ -2,7 +2,8 @@
     <div class="container">
       <h1 class="u-color--white u-fontWeight--bold u-fontSize--header u-textAlign--center u-marginTop--most u-marginBottom--more">Help Center</h1>
       <div class="search-wrapper">
-        <input type="text" />
+        <input type="text" id="search-box" />
+        <div id="instantSearchResults" style="display: none"></div>
       </div>
     </div>
   </div>
