--- a/static/css/sections/search.css
+++ b/static/css/sections/search.css
@@ -7,3 +7,25 @@
 .search-wrapper input {
   width: 100%;
 }
+
+.algolia-autocomplete {
+  width: 100%;
+}
+
+.aa-dropdown-menu {
+  width: 100%;
+  background: #fff;
+  padding: 25px 30px;
+  box-sizing: border-box;
+  box-shadow: 0 2px 4px 0 #C4C7CA;
+  border-radius: 4px;
+  margin: 10px 0 0 0;
+}
+
+#search-box {
+  width: 960px;
+  box-sizing: border-box;
+  height: 40px;
+  padding: 0 15px;
+  font-size: 14px;
+}
