add responsive styles for most of the sections on the landing page

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -15,7 +15,7 @@
 	<header>
 		<nav>
 			<div class="container">
-				<ul>
+				<ul class="paddingContainer">
 					<li>
 						<a href="{{ .Site.BaseURL }}">
 							<img width="109" src="{{ .Site.BaseURL }}images/logo@2x.png"/>
