--- a/layouts/partials/quicklink_blocks.html
+++ b/layouts/partials/quicklink_blocks.html
@@ -1,6 +1,6 @@
   <div class="quicklinks-wrapper">
     <div class="container">
-      <div class="u-flexTabletReflow flex1 quicklinks-blocks-wrapper">
+      <div class="u-flexTabletReflow flex1 quicklinks-blocks-wrapper paddingContainer">
 
         <div class="quicklink-block-wrapper flex1">
           <a>
@@ -10,7 +10,7 @@
               </div>
               <div>
                 <p class="u-fontSize--largest u-color--tuna u-fontWeight--medium u-marginBottom--normal">Guides</p>
-                <p class="u-fontSize--normal u-color--dustyGray u-lineHeight--normal">Step-by-step guides for all things Replicated for beginners and experienced users alike.</p>
+                <p class="u-fontSize--normal u-color--dustyGray u-lineHeight--normal">Guides for all things Replicated for beginners and experienced users alike.</p>
               </div>
             </div>
           </a>
@@ -24,7 +24,7 @@
               </div>
               <div>
                 <p class="u-fontSize--largest u-color--tuna u-fontWeight--medium u-marginBottom--normal">Documentation</p>
-                <p class="u-fontSize--normal u-color--dustyGray u-lineHeight--normal">From packaging to distribution. Whatever you're looking for, you can find it here.</p>
+                <p class="u-fontSize--normal u-color--dustyGray u-lineHeight--normal">From packaging to distribution. Whatever you need, you can find it here.</p>
               </div>
             </div>
           </a>
