--- a/layouts/partials/documentation_reference_section.html
+++ b/layouts/partials/documentation_reference_section.html
@@ -1,12 +1,13 @@
   <div class="documentation main-section">
     <div class="container">
       <div class="header-wrapper u-textAlign--center">
-        <p class="u-color--tuna u-fontWeight--bold u-fontSize--header u-marginBottom--normal">Documentation reference</p>
-        <p class="u-fontSize--large u-fontWeight--medium u-color--dustyGray u-lineHeight--normal">Quickly find docs for whatever you need help with.</p>
+        <div class="paddingContainer">
+          <p class="u-color--tuna u-fontWeight--bold u-fontSize--header u-marginBottom--normal">Documentation reference</p>
+          <p class="u-fontSize--large u-fontWeight--medium u-color--dustyGray u-lineHeight--normal">Quickly find docs for whatever you need help with.</p>
+        </div>
       </div>
       <div class="docs-ref-wrapper">
-        <div class="u-flexTabletReflow docs-ref-list flex1 flexWrap--wrap">
-
+        <div class="docs-ref-list paddingContainer">
           <div class="doc-ref-list-item">
             <div class="doc-ref">
               <p class="u-fontSize--largest u-fontWeight--medium u-color--tuna">Getting Started</p>
@@ -17,9 +18,8 @@
                 <li><a class="u-color--curiousBlue u-textDecoration--underlineOnHover">Ref item 4</a></li>
               </ul>
             </div>
-          </div>
-
-          <div class="doc-ref-list-item">
+          </div><!--
+          --><div class="doc-ref-list-item">
             <div class="doc-ref">
               <p class="u-fontSize--largest u-fontWeight--medium u-color--tuna">Packaging An Application</p>
               <ul>
@@ -29,9 +29,8 @@
                 <li><a class="u-color--curiousBlue u-textDecoration--underlineOnHover">Ref item 4</a></li>
               </ul>
             </div>
-          </div>
-
-          <div class="doc-ref-list-item">
+          </div><!--
+          --><div class="doc-ref-list-item">
             <div class="doc-ref">
               <p class="u-fontSize--largest u-fontWeight--medium u-color--tuna">Distributing An Application</p>
               <ul>
@@ -41,9 +40,8 @@
                 <li><a class="u-color--curiousBlue u-textDecoration--underlineOnHover">Ref item 4</a></li>
               </ul>
             </div>
-          </div>
-
-          <div class="doc-ref-list-item">
+          </div><!--
+          --><div class="doc-ref-list-item">
             <div class="doc-ref">
               <p class="u-fontSize--largest u-fontWeight--medium u-color--tuna">Examples</p>
               <ul>
@@ -53,9 +51,8 @@
                 <li><a class="u-color--curiousBlue u-textDecoration--underlineOnHover">Ref item 4</a></li>
               </ul>
             </div>
-          </div>
-
-          <div class="doc-ref-list-item">
+          </div><!--
+          --><div class="doc-ref-list-item">
             <div class="doc-ref">
               <p class="u-fontSize--largest u-fontWeight--medium u-color--tuna">Reference</p>
               <ul>
@@ -65,9 +62,8 @@
                 <li><a class="u-color--curiousBlue u-textDecoration--underlineOnHover">Ref item 4</a></li>
               </ul>
             </div>
-          </div>
-
-          <div class="doc-ref-list-item">
+          </div><!--
+          --><div class="doc-ref-list-item">
             <div class="doc-ref">
               <p class="u-fontSize--largest u-fontWeight--medium u-color--tuna">Knowledge Base</p>
               <ul>
@@ -78,7 +74,6 @@
               </ul>
             </div>
           </div>
-
         </div>
       </div>
     </div>
