--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,7 +1,7 @@
 	<footer>
 		<div class="container">
 			<div class="footer-items-wrapper">
-        <div class="u-flexTabletReflow footer-list flex1 flexWrap--wrap">
+        <div class="u-flexTabletReflow footer-list flex1 flexWrap--wrap paddingContainer">
 
 					<div class="footer-list-item">
             <div class="footer-item">
