--- a/layouts/partials/howto_section.html
+++ b/layouts/partials/howto_section.html
@@ -1,12 +1,14 @@
   <div class="howto main-section u-gradient--whiteToGray">
      <div class="container u-textAlign--center">
         <div class="header-wrapper">
-         <p class="u-color--tuna u-fontWeight--bold u-fontSize--header u-marginBottom--normal">How-to Guides</p>
-          <p class="u-fontSize--large u-fontWeight--medium u-color--dustyGray u-lineHeight--normal">It's time to earn those Replicated wings. We've curated guides to take you from account creation to shipping your first application.</p>
+          <div class="paddingContainer">
+            <p class="u-color--tuna u-fontWeight--bold u-fontSize--header u-marginBottom--normal">How-to Guides</p>
+            <p class="u-fontSize--large u-fontWeight--medium u-color--dustyGray u-lineHeight--normal">It's time to earn those Replicated wings. We've curated guides to take you from account creation to shipping your first application.</p>
+          </div>
         </div>
 
         <div class="guides-block-wrapper">
-          <div class="u-flexTabletReflow flex1">
+          <div class="u-flexTabletReflow flex1 paddingContainer">
 
             <div class="guide-block-wrapper flex1">
               <div class="guide-block">
