--- a/layouts/partials/scheduler_section.html
+++ b/layouts/partials/scheduler_section.html
@@ -1,12 +1,14 @@
   <div class="schedulers main-section">
      <div class="container">
         <div class="header-wrapper u-textAlign--center">
-         <p class="u-color--tuna u-fontWeight--bold u-fontSize--header u-marginBottom--normal">Which scheduler is right for you?</p>
-          <p class="u-fontSize--large u-fontWeight--medium u-color--dustyGray u-lineHeight--normal">Replicated gives you the flexibility to choose an orchestration layer that works best for your companies deployment strategy.</p>
+          <div class="paddingContainer">
+            <p class="u-color--tuna u-fontWeight--bold u-fontSize--header u-marginBottom--normal">Which scheduler is right for you?</p>
+            <p class="u-fontSize--large u-fontWeight--medium u-color--dustyGray u-lineHeight--normal">Replicated gives you the flexibility to choose an orchestration layer that works best for your companies deployment strategy.</p>
+          </div>
         </div>
 
         <div class="schedulers-wrapper">
-          <div class="u-flexTabletReflow flex1">
+          <div class="u-flexTabletReflow flex1 paddingContainer">
 
             <div class="scheduler-wrapper flex1">
               <div class="scheduler">
