--- a/layouts/partials/search_section.html
+++ b/layouts/partials/search_section.html
@@ -2,7 +2,9 @@
     <div class="container">
       <h1 class="u-color--white u-fontWeight--bold u-fontSize--header u-textAlign--center">Help Center</h1>
       <div class="search-wrapper">
-        <input type="text" />
+        <div class="paddingContainer">
+          <input type="text" />
+        </div>
       </div>
     </div>
   </div>
