--- a/static/css/sections/footer.css
+++ b/static/css/sections/footer.css
@@ -2,17 +2,19 @@ footer {
   padding: 20px 0 35px;
   border-top: 1px solid #DFDFDF;
 }
-.footer-items-wrapper {
-  margin-left: -20px;
-  margin-right: -20px;
-}
 .footer-list .footer-list-item {
    width: 20%; 
 }
 .footer-item {
   margin-top: 30px;
   padding-left: 20px;
-  padding-right: 20px; 
+  padding-right: 20px;  
+}
+.footer-item:first-child {
+  padding-left: 0;
+}
+.footer-item:last-child {
+  padding-right: 0;
 }
 .footer-item p {
   line-height: 1;
@@ -23,4 +25,12 @@ footer {
   font-weight: 500;
   padding-bottom: 14px;
   position: relative;
+}
+
+/* ≥ 768px */
+@media screen and (min-width: 48em) {
+  /* .footer-items-wrapper {
+    margin-left: -20px;
+    margin-right: -20px; 
+  } */
 }
