--- a/static/css/sections/guideblocks.css
+++ b/static/css/sections/guideblocks.css
@@ -1,11 +1,8 @@
 .guides-block-wrapper {
-  margin-top: 50px;
-  margin-left: -14px;
-  margin-right: -14px;
+  margin-top: 30px;
 }
 .guide-block-wrapper {
-  padding-left: 14px;
-  padding-right: 14px;
+  margin-top: 20px;
 }
 .guide-block {
   background-color: #ffffff;
@@ -17,4 +14,25 @@
 .guide-block .icon-wrapper {
   min-height: 78px;
   margin-bottom: 30px;
+}
+
+/* ≥ 768px */
+@media screen and (min-width: 48em) {
+  .guides-block-wrapper {
+    margin-top: 50px;
+  }
+  .guide-block-wrapper {
+    padding-right: 10px;
+    margin-top: 0;
+  }
+  .guide-block-wrapper:last-child {
+    padding-right: 0;
+  }
+}
+
+/* ≥ 960px */
+@media screen and (min-width: 60em) {
+  .guide-block-wrapper {
+    padding-right: 28px;
+  }
 }
