--- a/static/css/sections/schedulers.css
+++ b/static/css/sections/schedulers.css
@@ -1,11 +1,8 @@
 .schedulers-wrapper {
-  margin-top: 60px;
-  margin-left: -20px;
-  margin-right: -20px;
+  margin-top: 0;
 }
 .scheduler-wrapper {
-  padding-left: 20px;
-  padding-right: 20px;
+  margin-top: 60px;
 }
 .scheduler .icon-wrapper {
   min-height: 89px;
@@ -33,4 +30,18 @@
   -webkit-transform: translateX(3px);
   -moz-transform: translateX(3px);
   transform: translateX(3px);
+}
+
+/* ≥ 768px */
+@media screen and (min-width: 48em) {
+  .schedulers-wrapper {
+    margin-top: 60px;
+  }
+  .scheduler-wrapper {
+    padding-right: 40px;
+    margin-top: 0;
+  }
+  .scheduler-wrapper:last-child {
+    padding-right: 0;
+  }
 }
