--- a/static/css/sections/footer.css
+++ b/static/css/sections/footer.css
@@ -3,18 +3,11 @@ footer {
   border-top: 1px solid #DFDFDF;
 }
 .footer-list .footer-list-item {
-   width: 20%; 
+   width: 100%;
+   margin-top: 30px;
 }
-.footer-item {
-  margin-top: 30px;
-  padding-left: 20px;
-  padding-right: 20px;  
-}
-.footer-item:first-child {
-  padding-left: 0;
-}
-.footer-item:last-child {
-  padding-right: 0;
+.footer-list .footer-list-item:first-child {
+   margin-top: 0;
 }
 .footer-item p {
   line-height: 1;
@@ -29,8 +22,13 @@ footer {
 
 /* ≥ 768px */
 @media screen and (min-width: 48em) {
-  /* .footer-items-wrapper {
-    margin-left: -20px;
-    margin-right: -20px; 
-  } */
+  .footer-list .footer-list-item {
+    width: 20%;
+  }
+  .footer-item {
+    padding-right: 40px;
+  }
+  .footer-item:last-child {
+    padding-right: 0;
+  }
 }
