--- a/static/css/sections/footer.css
+++ b/static/css/sections/footer.css
@@ -2,19 +2,26 @@ footer {
   padding: 20px 0 35px;
   border-top: 1px solid #DFDFDF;
 }
+.footer-list {
+  display: block;
+}
 .footer-list .footer-list-item {
-   width: 100%;
-   margin-top: 30px;
+   width: 50%;
+   margin-top: 20px;
+   display: inline-block;
 }
 .footer-list .footer-list-item:first-child {
    margin-top: 0;
+   width: 100%;
+   border-bottom: 1px solid #DFDFDF;
 }
 .footer-item p {
   line-height: 1;
   padding-bottom: 20px;
+  font-size: 14px;
 }
 .footer-item li {
-  font-size: 14px;
+  font-size: 12px;
   font-weight: 500;
   padding-bottom: 14px;
   position: relative;
@@ -22,13 +29,20 @@ footer {
 
 /* ≥ 768px */
 @media screen and (min-width: 48em) {
+  .footer-list {
+    display: flex;
+  }
   .footer-list .footer-list-item {
     width: 20%;
+    margin-top: 30px;
   }
-  .footer-item {
-    padding-right: 40px;
+  .footer-list .footer-list-item:first-child {
+    width: 20%;
+    margin-top: 30px;
+    border-bottom: none;
   }
-  .footer-item:last-child {
-    padding-right: 0;
-  }
+  .footer-item { padding-right: 40px; }
+  .footer-item:last-child { padding-right: 0; }
+  .footer-item p { font-size: 16px; }
+  .footer-item li { font-size: 14px; }
 }
