--- a/static/css/sections/search.css
+++ b/static/css/sections/search.css
@@ -26,6 +26,56 @@
   box-shadow: 0 2px 4px 0 #C4C7CA;
   border-radius: 4px;
   margin: 10px 0 0 0;
+  z-index: 3;
+  position: relative;
+}
+
+.aa-dataset-other,
+.aa-dataset-docs {
+  margin: 30px 0;
+}
+
+.aa-header {
+  color: #323232;
+  font-weight: bold;
+  font-size: 14px;
+  margin: 0 0 15px 0;
+}
+
+.aa-suggestion {
+  padding: 10px 15px;
+  border-bottom: 1px solid rgba(155, 155, 155, .4);
+  min-height: 43px;
+  cursor: pointer;
+}
+
+.aa-dataset-docs .aa-suggestion {
+  padding-left: 55px;
+  position: relative;
+}
+
+.aa-dataset-docs .aa-suggestion .u-documentationIcon {
+  position: absolute;
+  left: 10px;
+  top: 10px;
+  transform: scale(0.6);
+}
+
+.aa-suggestion:hover {
+  background: rgba(163, 211, 233, .5);
+}
+
+.aa-suggestion-header {
+  color: #323232;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 22px;
+}
+
+.aa-suggestion-description {
+  line-height: 22px;
+  font-size: 12px;
+  color: #9B9B9B;
 }
 
 #search-box {
@@ -36,3 +86,4 @@
   font-size: 14px;
   height: 40px;
 }
+
