search box styles and mobile navigation toggling

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -11,6 +11,17 @@
 	<script src="https://cdn.jsdelivr.net/algoliasearch/3/algoliasearch.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/autocomplete.js/0/autocomplete.min.js"></script>
 	<script>
+
+		function toggleMenuClass() {
+			this.classList.toggle("open");
+			document.getElementById("headerLinks").classList.toggle("show");
+		}
+		const toggleMenu = document.getElementById("toggleNav");
+		if (toggleMenu) {
+			toggleMenu.addEventListener("click", toggleMenuClass);
+		};
+
+
 		const results = document.getElementById("instantSearchResults");
 		const searchBox = document.getElementById("search-box");
 		
