--- a/static/css/sections/search.css
+++ b/static/css/sections/search.css
@@ -21,7 +21,7 @@
 .aa-dropdown-menu {
   width: 100%;
   background: #fff;
-  padding: 25px 30px;
+  padding: 0 20px;
   box-sizing: border-box;
   box-shadow: 0 2px 4px 0 #C4C7CA;
   border-radius: 4px;
@@ -79,11 +79,7 @@
 }
 
 #search-box {
-  width: 960px;
-  box-sizing: border-box;
-  height: 40px;
-  padding: 0 15px;
-  font-size: 14px;
+  width: 100%;
   height: 40px;
 }
 
