--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,6 +1,6 @@
 {{ partial "header.html" . }}
 	<main>
-		{{ partial "search_section.html" . }}
+		{{ partial "autocompletesearch_section.html" . }}
 		{{ partial "quicklink_blocks.html" . }}
 		{{ partial "howto_section.html" . }}
 		{{ partial "documentation_reference_section.html" . }}
