--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -10,6 +10,7 @@
 	<link rel="stylesheet" href="{{ .Site.BaseURL }}css/style.css">
 	<!-- Instant Search Library Stylesheet -->
 	<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/instantsearch.js@2.0.0/dist/instantsearch.min.css">
+	<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/instantsearch.js@2.0.2/dist/instantsearch-theme-algolia.min.css">
 	{{ if .RSSLink -}}<link href="{{ .RSSLink }}" rel="feed" type="application/rss+xml" title="{{ .Site.Title }}">{{- end }}
 	{{ .Hugo.Generator }}
 	<!-- Autocomplete Library -->
