Added toggleClass function back into footer

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -13,5 +13,16 @@
 	<script src="https://cdn.jsdelivr.net/npm/instantsearch.js@1/dist/instantsearch.min.js"></script>
 	<script src="{{ .Site.BaseURL }}js/autocomplete-search.js"></script>
 	<script src="{{ .Site.BaseURL }}js/instantsearch-search.js"></script>
+
+	<script>
+		function toggleMenuClass() {
+			this.classList.toggle("open");
+			document.getElementById("headerLinks").classList.toggle("show");
+		}
+		const toggleMenu = document.getElementById("toggleNav");
+		if (toggleMenu) {
+			toggleMenu.addEventListener("click", toggleMenuClass);
+		};
+	</script>
 </body>
 </html>
