moved instant search js to search/list.html

--- a/layouts/search/list.html
+++ b/layouts/search/list.html
@@ -15,4 +15,7 @@
 			</div>
 		</div>
 	</main>
+
+<script src="https://cdn.jsdelivr.net/npm/instantsearch.js@1/dist/instantsearch.min.js"></script>
+<script src="{{ .Site.BaseURL }}js/instantsearch-search.js"></script>
 {{ partial "footer.html" . }}
