--- a/layouts/partials/howto_section.html
+++ b/layouts/partials/howto_section.html
@@ -13,7 +13,7 @@
             <div class="guide-block-wrapper flex1">
               <div class="guide-block">
                 <div class="icon-wrapper flex-column justifyContent--flexEnd alignItems--center">
-                  <span class="icon u-starterWings"></span>
+                  <span class="icon u-beginnerWings"></span>
                 </div>
                 <div>
                   <p class="u-fontSize--largest u-color--tuna u-fontWeight--medium u-marginBottom--normal">Getting started</p>
