--- a/layouts/partials/quicklink_blocks.html
+++ b/layouts/partials/quicklink_blocks.html
@@ -3,7 +3,7 @@
       <div class="u-flexTabletReflow flex1 quicklinks-blocks-wrapper paddingContainer">
 
         <div class="quicklink-block-wrapper flex1">
-          <a>
+          <a href="/guides">
             <div class="quicklink-block">
               <div class="icon-wrapper">
                 <span class="icon u-guidesIcon"></span>
