--- a/static/css/sections/header.css
+++ b/static/css/sections/header.css
@@ -48,6 +48,7 @@ nav ul ul.show {
 @media screen and (min-width: 48em) {
   nav {
     position: absolute;
+    background: rgba(255,255,255,.2);
   }
   nav ul li {
     display: inline-block;
