--- a/static/css/style.css
+++ b/static/css/style.css
@@ -15,3 +15,4 @@
 @import "./sections/guideblocks.css";
 @import "./sections/documentation_reference.css";
 @import "./sections/schedulers.css";
+@import "./sections/guides.css";
