--- a/static/css/pages/single.css
+++ b/static/css/pages/single.css
@@ -8,8 +8,34 @@
     margin-bottom: 10px;
 }
 
+.single .main-section .container {
+    display: block;
+}
+
 .single .container {
     max-width: 960px;
+    display: flex;
+}
+
+.sidebar {
+    max-width: 180px;
+    padding: 50px 0;
+    margin-left: 30px;
+}
+
+#tags li {
+    display: inline-block;
+}
+
+#tags li a {
+    padding: 5px 10px;
+    display: inline-block;
+    background: #F5F8FC;
+    border: solid 1px #979797;
+    border-radius: 2px;
+    margin: 4px 2px;
+    font-size: 10px;
+    color: #979797;
 }
 
 .content {
@@ -115,5 +141,6 @@
     line-height: 1.4;
     color: #9B9B9B;
 }
+
 
 
