--- a/static/css/pages/single.css
+++ b/static/css/pages/single.css
@@ -32,7 +32,7 @@
 .content p {
     font-size: 14px;
     color: #9B9B9B;
-    line-height: 1.4em;
+    line-height: 22px;
     margin: 20px 0;
 }
 
@@ -47,6 +47,7 @@
     background-color: #f9f2f4;
     overflow: scroll;
     border-radius: 6px;
+    border: 1px solid #C4C7CA;
 }
 
 .content table {
@@ -54,6 +55,7 @@
     border-collapse: initial;
     border: solid 1px #C4C7CA;
     margin: 40px 0;
+    overflow: hidden;
 }
 
 .content table thead {
@@ -63,6 +65,7 @@
 
 .content table thead th {
     font-weight: 500;
+    border-bottom: solid 1px #C4C7CA;
 }
 
 .content table td {
@@ -78,6 +81,7 @@
 .content table td {
     padding: 15px 20px;
     font-size: 14px;
+    line-height: 22px;
 }
 
 .content .page-notes {
@@ -116,4 +120,35 @@
     color: #9B9B9B;
 }
 
-
+.content .note.admonition {
+    background-color: #2A98CB;
+    padding: 12px 20px;
+    border-radius: 6px;
+}
+.content .note.admonition p {
+    color: #ffffff;
+    font-size: 14px;
+    line-height: 22px;
+    margin: 0;
+}
+.content .note.admonition p.admonition-title {
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 26px;
+    margin-bottom: 4px;
+    padding-left: 22px;
+    position: relative;
+}
+.content .note.admonition p.admonition-title::before {
+    background-image: url("../../images/main_spritesheet.svg");
+    background-repeat: no-repeat;
+    background-size: initial;
+    display: inline-block;
+    background-position: -70px -74px;
+    width: 13px;
+    height: 20px;
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 4px;
+}
