--- a/static/css/pages/single.css
+++ b/static/css/pages/single.css
@@ -14,22 +14,17 @@
 
 .single .container {
     max-width: 960px;
-    display: flex;
+    box-sizing: border-box;
 }
 
 .sidebar {
     max-width: 180px;
+    width: 100%;
     padding: 50px 0;
-    margin-left: 30px;
-}
-
-#tags li {
-    display: inline-block;
 }
 
 #tags li a {
     padding: 5px 10px;
-    display: inline-block;
     background: #F5F8FC;
     border: solid 1px #979797;
     border-radius: 2px;
@@ -140,6 +135,19 @@
     font-size: 14px;
     line-height: 1.4;
     color: #9B9B9B;
+}
+
+@media screen and (max-width: 48em) {
+    .single .container.flex {
+        flex-wrap: wrap;
+    }
+
+    .sidebar {
+        padding: 0;
+        margin-left: 0;
+        margin-bottom: 20px;
+        max-width: 100%;
+    }
 }
 
 
