--- a/static/css/utilities/typography.css
+++ b/static/css/utilities/typography.css
@@ -5,6 +5,7 @@
 .u-fontSize--large   { font-size: 16px; }
 .u-fontSize--larger  { font-size: 18px; }
 .u-fontSize--largest { font-size: 20px; }
+.u-fontSize--jumbo   { font-size: 24px; }
 .u-fontSize--header  { font-size: 32px; }
 
 /* Line height */
