--- a/layouts/partials/howto_section.html
+++ b/layouts/partials/howto_section.html
@@ -20,7 +20,7 @@
                   <p class="u-fontSize--normal u-color--dustyGray u-lineHeight--normal">Let us be the first to welcome you! We'll start with core concepts and terminology and then get you set up to create and license your first&nbsp;application.</p>
                 </div>
                 <div class="u-marginTop--more">
-                  <a class="Button secondary">View guide</a>
+                  <a href="/guides/getting-started" class="Button secondary">View guide</a>
                 </div>
               </div>
             </div>
@@ -35,7 +35,7 @@
                   <p class="u-fontSize--normal u-color--dustyGray u-lineHeight--normal">You've used Replicated and mastered the basics. You are familiar with all of the core concepts and terminology and have probably shipped at least one&nbsp;application.</p>
                 </div>
                 <div class="u-marginTop--more">
-                  <a class="Button secondary">View guide</a>
+                  <a href="/guides/get-to-know-our-features" class="Button secondary">View guide</a>
                 </div>
               </div>
             </div>
@@ -49,7 +49,7 @@
                   <p class="u-fontSize--largest u-color--tuna u-fontWeight--medium u-marginBottom--normal">Become production ready</p>
                   <p class="u-fontSize--normal u-color--dustyGray u-lineHeight--normal">You've mastered Replicated, you probably  have shipped multiple applications and are familiar with some of our more advanced&nbsp;features.</p>
                   <div class="u-marginTop--more">
-                    <a class="Button secondary">View guide</a>
+                    <a href="/guides/become-production-ready" class="Button secondary">View guide</a>
                   </div>
                 </div>
               </div>
