--- a/static/css/style.css
+++ b/static/css/style.css
@@ -16,5 +16,6 @@
 @import "./sections/quicklinks.css";
 @import "./sections/guideblocks.css";
 @import "./sections/documentation_reference.css";
+@import "./sections/docs.css";
 @import "./sections/schedulers.css";
 @import "./sections/guides.css";
