layout updates for docs pages

--- a/layouts/docs/list.html
+++ b/layouts/docs/list.html
@@ -3,13 +3,15 @@
 		<article class="single docs-page">
 			<div class="u-gradient--turquoiseToGreen main-section flex-column flex1 justifyContent--center">
 				<div class="container u-marginTop--most">
-					<div class="flex flex-auto justifyContent--center u-marginTop--more">
-						<div class="flex-auto">
-							<span class="icon u-docsHeaderIcon u-marginRight--normal"></span>
-						</div>
-						<div class="flex-auto">
-							<h3 class="u-color--white u-fontWeight--bold u-fontSize--header">Documentation</h3>
-							<p class="u-fontSize--normal u-fontWeight--medium u-color--white u-marginTop--small">Quickly find docs for whatever you need help with.</p>
+					<div class="paddingContainer">
+						<div class="flex flex-auto justifyContent--center u-marginTop--more">
+							<div class="flex-auto">
+								<span class="icon u-docsHeaderIcon u-marginRight--normal"></span>
+							</div>
+							<div class="flex-auto">
+								<h3 class="u-color--white u-fontWeight--bold u-fontSize--header">Documentation</h3>
+								<p class="u-fontSize--normal u-fontWeight--medium u-color--white u-marginTop--small">Quickly find docs for whatever you need help with.</p>
+							</div>
 						</div>
 					</div>
 				</div>
