--- a/layouts/docs/special.html
+++ b/layouts/docs/special.html
@@ -3,22 +3,25 @@
 		<article class="single">
 			<div class="u-gradient--turquoiseToGreen main-section flex-column flex1 justifyContent--center">
 				<div class="container u-marginTop--most">
-					<div class="paddingContainer">
+					<div class="paddingContainer special-header">
 						<h1 class="u-color--white u-fontWeight--bold u-fontSize--header u-textAlign--left">
 							{{ .Title }}
 						</h1>
+						{{ .Content }}
 					</div>
 				</div>
 			</div>
 			<div class="main-section">
 				<div class="container">
 					<div class="paddingContainer">
-						 <ul class="single-cat-docs-list">
+						<ul class="single-cat-docs-list">
 							{{ range .Params.docsList }}
 								<li>
                   <a href="{{ .uri }}">
-                    <p class="u-fontSize--largest u-fontWeight--medium u-marginBottom--normal list-title">{{ .title }}</p>
-                    <p class="u-fontSize--large u-color--dustyGray u-margin--none u-lineHeight--normal">{{ .description }}</p>
+										<p class="u-fontSize--largest u-fontWeight--medium list-title">{{ .title }}</p>
+										{{ if .description }}
+											<p class="u-fontSize--large u-color--dustyGray u-marginTop--normal u-lineHeight--normal">{{ .description }}</p>
+										{{ end }}
                   </a>
 								</li>
 							{{ end }}
