--- a/layouts/partials/quicklink_blocks.html
+++ b/layouts/partials/quicklink_blocks.html
@@ -45,7 +45,7 @@
         </div>
 
         <div class="quicklink-block-wrapper flex1">
-          <a>
+          <a href="mailto:support@replicated.com">
             <div class="quicklink-block">
               <div class="icon-wrapper">
                 <span class="icon u-contactIcon"></span>
