Added link to more docs from homepage if count is greater than 6

--- a/layouts/docs/list.html
+++ b/layouts/docs/list.html
@@ -9,7 +9,7 @@
 		</div>
         <div class="content">
             <div class="container">
-                Docs
+                docs
             </div>
         </div>
     </main>
