--- a/layouts/guides/single.html
+++ b/layouts/guides/single.html
@@ -24,6 +24,7 @@
 						</div>
 						<div class="flex1 right-block">
 							<div class="guide-chapters-wrapper">
+								{{ .Content }}
 								<ul>
 									{{ range .Params.chapters }}
 										<li>
