--- a/layouts/partials/documentation_reference_section.html
+++ b/layouts/partials/documentation_reference_section.html
@@ -12,66 +12,102 @@
             <div class="doc-ref">
               <p class="u-fontSize--largest u-fontWeight--medium u-color--tuna">Getting Started</p>
               <ul>
-                <li><a class="u-color--curiousBlue u-textDecoration--underlineOnHover">Ref item 1</a></li>
-                <li><a class="u-color--curiousBlue u-textDecoration--underlineOnHover">Ref item 2</a></li>
-                <li><a class="u-color--curiousBlue u-textDecoration--underlineOnHover">Ref item 3</a></li>
-                <li><a class="u-color--curiousBlue u-textDecoration--underlineOnHover">Ref item 4</a></li>
+                {{ range $index, $element := first 6 $.Site.Data.docs.categories.help_center_getting_started }}
+                  <li>
+                    <a href={{ $element.uri }} class="u-color--curiousBlue u-textDecoration--underlineOnHover">{{ $element.title }}</a>
+                  </li>
+                {{ end }}
               </ul>
+              {{ with $list := $.Site.Data.docs.categories.help_center_getting_started }}
+                {{ if gt (len $list) 6 }}
+                  <a href="/docs/getting-started" class="more-items u-borderAll--gray u-fontSize--small u-color--curiousBlue">+ {{ (len $list) sub 6 }} More</a>
+                {{ end }}
+              {{ end }}
             </div>
           </div><!--
           --><div class="doc-ref-list-item">
             <div class="doc-ref">
               <p class="u-fontSize--largest u-fontWeight--medium u-color--tuna">Packaging An Application</p>
               <ul>
-                <li><a class="u-color--curiousBlue u-textDecoration--underlineOnHover">Ref item 1</a></li>
-                <li><a class="u-color--curiousBlue u-textDecoration--underlineOnHover">Ref item 2</a></li>
-                <li><a class="u-color--curiousBlue u-textDecoration--underlineOnHover">Ref item 3</a></li>
-                <li><a class="u-color--curiousBlue u-textDecoration--underlineOnHover">Ref item 4</a></li>
+                {{ range $index, $element := first 6 $.Site.Data.docs.categories.help_center_packaging }}
+                  <li>
+                    <a href={{ $element.uri }} class="u-color--curiousBlue u-textDecoration--underlineOnHover">{{ $element.title }}</a>
+                  </li>
+                {{ end }}
               </ul>
+              {{ with $list := $.Site.Data.docs.categories.help_center_packaging }}
+                {{ if gt (len $list) 6 }}
+                  <a href="/docs/packaging-an-application" class="more-items u-borderAll--gray u-fontSize--small u-color--curiousBlue">+ {{ (len $list) sub 6 }} More</a>
+                {{ end }}
+              {{ end }}
             </div>
           </div><!--
           --><div class="doc-ref-list-item">
             <div class="doc-ref">
               <p class="u-fontSize--largest u-fontWeight--medium u-color--tuna">Distributing An Application</p>
               <ul>
-                <li><a class="u-color--curiousBlue u-textDecoration--underlineOnHover">Ref item 1</a></li>
-                <li><a class="u-color--curiousBlue u-textDecoration--underlineOnHover">Ref item 2</a></li>
-                <li><a class="u-color--curiousBlue u-textDecoration--underlineOnHover">Ref item 3</a></li>
-                <li><a class="u-color--curiousBlue u-textDecoration--underlineOnHover">Ref item 4</a></li>
+                {{ range $index, $element := first 6 $.Site.Data.docs.categories.help_center_distributing }}
+                  <li>
+                    <a href={{ $element.uri }} class="u-color--curiousBlue u-textDecoration--underlineOnHover">{{ $element.title }}</a>
+                  </li>
+                {{ end }}
               </ul>
+              {{ with $list := $.Site.Data.docs.categories.help_center_distributing }}
+                {{ if gt (len $list) 6 }}
+                  <a href="/docs/distributing-an-application" class="more-items u-borderAll--gray u-fontSize--small u-color--curiousBlue">+ {{ (len $list) sub 6 }} More</a>
+                {{ end }}
+              {{ end }}
             </div>
           </div><!--
           --><div class="doc-ref-list-item">
             <div class="doc-ref">
               <p class="u-fontSize--largest u-fontWeight--medium u-color--tuna">Examples</p>
               <ul>
-                <li><a class="u-color--curiousBlue u-textDecoration--underlineOnHover">Ref item 1</a></li>
-                <li><a class="u-color--curiousBlue u-textDecoration--underlineOnHover">Ref item 2</a></li>
-                <li><a class="u-color--curiousBlue u-textDecoration--underlineOnHover">Ref item 3</a></li>
-                <li><a class="u-color--curiousBlue u-textDecoration--underlineOnHover">Ref item 4</a></li>
+                {{ range $index, $element := first 6 $.Site.Data.docs.categories.help_center_examples }}
+                  <li>
+                    <a href={{ $element.uri }} class="u-color--curiousBlue u-textDecoration--underlineOnHover">{{ $element.title }}</a>
+                  </li>
+                {{ end }}
               </ul>
+              {{ with $list := $.Site.Data.docs.categories.help_center_examples }}
+                {{ if gt (len $list) 6 }}
+                  <a href="/docs/examples" class="more-items u-borderAll--gray u-fontSize--small u-color--curiousBlue">+ {{ (len $list) sub 6 }} More</a>
+                {{ end }}
+              {{ end }}
             </div>
           </div><!--
           --><div class="doc-ref-list-item">
             <div class="doc-ref">
               <p class="u-fontSize--largest u-fontWeight--medium u-color--tuna">Reference</p>
               <ul>
-                <li><a class="u-color--curiousBlue u-textDecoration--underlineOnHover">Ref item 1</a></li>
-                <li><a class="u-color--curiousBlue u-textDecoration--underlineOnHover">Ref item 2</a></li>
-                <li><a class="u-color--curiousBlue u-textDecoration--underlineOnHover">Ref item 3</a></li>
-                <li><a class="u-color--curiousBlue u-textDecoration--underlineOnHover">Ref item 4</a></li>
+                {{ range $index, $element := $.Site.Data.docs.categories.help_center_reference }}
+                  <li>
+                    <a href={{ $element.uri }} class="u-color--curiousBlue u-textDecoration--underlineOnHover">{{ $element.title }}</a>
+                  </li>
+                {{ end }}
               </ul>
+              {{ with $list := $.Site.Data.docs.categories.help_center_reference }}
+                {{ if gt (len $list) 6 }}
+                  <a href="" class="more-items u-borderAll--gray u-fontSize--small u-color--curiousBlue">+ {{ (len $list) sub 6 }} More</a>
+                {{ end }}
+              {{ end }}
             </div>
           </div><!--
           --><div class="doc-ref-list-item">
             <div class="doc-ref">
               <p class="u-fontSize--largest u-fontWeight--medium u-color--tuna">Knowledge Base</p>
               <ul>
-                <li><a class="u-color--curiousBlue u-textDecoration--underlineOnHover">Ref item 1</a></li>
-                <li><a class="u-color--curiousBlue u-textDecoration--underlineOnHover">Ref item 2</a></li>
-                <li><a class="u-color--curiousBlue u-textDecoration--underlineOnHover">Ref item 3</a></li>
-                <li><a class="u-color--curiousBlue u-textDecoration--underlineOnHover">Ref item 4</a></li>
+                {{ range $index, $element := first 6 $.Site.Data.docs.categories.help_center_knowledgebase }}
+                  <li>
+                    <a href={{ $element.uri }} class="u-color--curiousBlue u-textDecoration--underlineOnHover">{{ $element.title }}</a>
+                  </li>
+                {{ end }}
               </ul>
+              {{ with $list := $.Site.Data.docs.categories.help_center_knowledgebase }}
+                {{ if gt (len $list) 6 }}
+                  <a href="/docs/kb" class="more-items u-borderAll--gray u-fontSize--small u-color--curiousBlue">+ {{ (len $list) sub 6 }} More</a>
+                {{ end }}
+              {{ end }}
             </div>
           </div>
         </div>
