--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -14,7 +14,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="container">
+			<div class="container flex flexWrap--noWrap">
 				<div class="paddingContainer">
 					<div class="content">
 						{{ .Content }}
