--- a/static/css/sections/search.css
+++ b/static/css/sections/search.css
@@ -22,7 +22,7 @@
 .aa-dropdown-menu {
   width: 100%;
   background: #fff;
-  padding: 0 20px;
+  padding: 0 20px 30px;
   box-sizing: border-box;
   box-shadow: 0 2px 4px 0 #C4C7CA;
   border-radius: 4px;
@@ -45,6 +45,7 @@
 
 .aa-suggestion {
   padding: 10px 15px;
+  min-height: 45px;
   border-bottom: 1px solid rgba(155, 155, 155, .4);
   cursor: pointer;
 }
@@ -52,12 +53,13 @@
   border-bottom: none;
 }
 
-.aa-dataset-docs .aa-suggestion {
-  padding-left: 55px;
+.aa-dataset-docs .aa-suggestion,
+.aa-dataset-guides .aa-suggestion  {
+  padding-left: 60px;
   position: relative;
 }
 
-.aa-dataset-docs .aa-suggestion .u-documentationIcon {
+.aa-suggestion .icon {
   position: absolute;
   left: 10px;
   top: 10px;
